:memo: Remove unused code